--- a/app/src/index.css
+++ b/app/src/index.css
@@ -65,7 +65,7 @@
 }
 
 @font-face {
-  font-family: "Inter";
+  font-family: "Alegreya";
   src: url(./assets/fonts/Alegreya/static/Alegreya-Bold.ttf) format("truetype");
   font-weight: 700;
 }
