--- a/app/src/index.css
+++ b/app/src/index.css
@@ -85,7 +85,23 @@
 @tailwind utilities;
 
 .container {
-  @apply px-36;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
 }
 
 .topics-li {
